fix: add more components

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="assets/dist/css/adminlte.min.css">
 </head>
-<body class="hold-transition dark-mode sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
   <app-root>
     <div class="wrapper"></div>
   </app-root>
